--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ header{
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 1;
 }
 
 .opening-page{
@@ -56,6 +57,7 @@ header{
     text-decoration: none;
     color: white;
     font-weight: 800;
+    margin-right: 10px;
 }
 
 .end{
@@ -71,6 +73,7 @@ header{
     color: white;
     font-size: 17px;
     font-weight: 800;
+    transition: border-bottom 0.2s ease-in-out;
 }
 
 section{
@@ -197,9 +200,12 @@ input:focus{
 .img1 , .img2 , .img3{
     border: 1px solid rgba(255, 255, 255, 0.559);
     cursor: pointer;
+    margin-bottom: 15px;
     width: 400px;
     display: flex;
     flex-direction: column;
+    flex: 0 1 auto;
+    gap: 10px;
     justify-content: center;
     padding: 10px;
     border-radius: 10px;
@@ -218,7 +224,7 @@ input:focus{
     align-items: center;
     justify-content: space-around;
     margin-top: 50px;
-    scroll-margin-top: 50px;
+    scroll-margin-top: 70px;
 }
 
 .plane img{
@@ -297,4 +303,20 @@ footer .contact{
     color: white;
     font-size: 30px;
     font-weight: 500;
+}
+
+@media  screen and (max-width: 790px) {
+    .end a{
+        display: none;
+    }
+
+    .end{
+        background-image: url(3_bars.png);
+        width: 20px;
+        height: 50px;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        border-radius: 10px;
+    }
 }
